[package]
name = "ssd1322_rs"
authors = ["Jamie Bird"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["oled", "screen", "embedded", "spi", "async"]
description = "A no-std async Rust driver for the SSD1322 OLED screen"
readme = "README.md"
categories = ["embedded"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embedded-graphics-core = {version = "0.4", optional = true}

[features]
frame = ["embedded-graphics-core"]
default = ["frame"]