[package]
authors = ["Jamie Bird"]
name = "ssd1322_embassy"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# embedded-hal = "0.2.6"
embedded-hal = { package = "embedded-hal", version = "1.0" }
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-hal-async = { version = "1.0" }

embassy-embedded-hal = { version = "0.1.0", git ="https://github.com/embassy-rs/embassy", package="embassy-embedded-hal" }
embassy-sync = { version = "*",  features = ["defmt"], git ="https://github.com/embassy-rs/embassy/", package="embassy-sync" }
embassy-stm32 = { version = "0.1.0", git ="https://github.com/embassy-rs/embassy/", package="embassy-stm32",  features = ["defmt", "stm32h745zi-cm7", "time-driver-tim2", "exti", "unstable-pac", "chrono"] }
embassy-executor = { version = "0.5.0", git ="https://github.com/embassy-rs/embassy/", package="embassy-executor",  features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.1", git ="https://github.com/embassy-rs/embassy/", package="embassy-time",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.0", git ="https://github.com/embassy-rs/embassy/", package="embassy-futures"}

heapless = { version = "0.8", default-features = false } # Adds Stack-Allocated String and Vec types
ssd1322_rs = {version = "0.1.0", path = "../"}
assign-resources = "0.4.1"
static_cell = "2" # Used for Static Alllocation
embedded-graphics = "0.8.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }